--- a/app/src/main/res/layout/activity_fragment2.xml
+++ b/app/src/main/res/layout/activity_fragment2.xml
@@ -4,12 +4,105 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="8dp"
     tools:context=".fragment2">
-    <TextView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="검색"
+            android:textColor="#000"
+            android:textSize="24dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="물건 조회"
-        android:textSize="40dp"
-        android:layout_gravity="center"/>
+        android:orientation="vertical"
+        android:padding="18dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="물건"
+                android:textColor="#000"
+                android:textSize="24dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/login_borderbox"
+            android:padding="8dp"
+            android:weightSum="100">
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="6dp"
+                android:layout_weight="92"
+                android:background="@null"
+                android:hint="물건명으로 검색해주세요"
+                android:textColorHint="#868e96" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="8"
+
+                android:src="@drawable/ic_baseline_search_black" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="12dp"
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <TextView
+                android:gravity="center"
+                android:layout_width="80dp"
+                android:text="처분방식"
+                android:textColor="#000"
+                android:background="@drawable/login_borderbox"
+                android:layout_height="30dp">
+
+            </TextView>
+            <TextView
+                android:layout_marginLeft="8dp"
+                android:gravity="center"
+                android:layout_width="80dp"
+                android:text="물건종류"
+                android:textColor="#000"
+                android:background="@drawable/login_borderbox"
+                android:layout_height="30dp">
+
+            </TextView>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
