--- a/app/src/main/res/layout/activity_hometab.xml
+++ b/app/src/main/res/layout/activity_hometab.xml
@@ -5,21 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="2"
+    android:weightSum="100"
+    android:elevation="10dp"
     tools:context=".hometab">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#4585FF"
+            android:layout_weight="10"
+            android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="280dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/mapo"
+                    android:text="Onbid"
+                    android:textColor="#fff"
+                    android:textSize="35dp" />
+        </LinearLayout>
 
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
+            android:layout_weight="83"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="0dp"
+           />
 
         <com.google.android.material.tabs.TabLayout
+            android:layout_weight="7"
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1" />
+            android:layout_height="0dp" />
 
 
 </LinearLayout>
