--- a/app/src/main/res/layout/activity_gradle2.xml
+++ b/app/src/main/res/layout/activity_gradle2.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:weightSum="100"
-    tools:context=".gradle.gradle2">
-
+    android:orientation="vertical"
+    tools:context=".gradle.gradle1">
     <LinearLayout
         android:layout_weight="10"
         android:layout_width="match_parent"
@@ -15,6 +14,7 @@
         android:background="@color/ourcolor"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/btn_grid2_backpress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -29,16 +29,63 @@
             android:textColor="#fff"
             android:textSize="35dp" />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#868e96" />
-
+        android:background="#868e96"
+        android:layout_height="1dp"/>
     <LinearLayout
+        android:layout_weight="90"
+        android:weightSum="90"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="90">
+        android:layout_height="0dp">
+        <com.google.android.material.tabs.TabLayout
+            android:layout_weight="6"
+            android:id="@+id/tabLayout_grid2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            android:weightSum="4"
+            android:background="#868e96">
+            <LinearLayout
+                android:id="@+id/linear_grid2_color1"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+            <LinearLayout
+                android:id="@+id/linear_grid2_color2"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+            <LinearLayout
+                android:id="@+id/linear_grid2_color3"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+            <LinearLayout
+                android:id="@+id/linear_grid2_color4"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+
+        </LinearLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager_grid2"
+            android:layout_weight="83"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            />
+
+
+
 
     </LinearLayout>
+
 </LinearLayout>
