새로운 목록조회 , 마감임박 목록조회 Activity, 상세조회 DataClass

--- a/app/src/main/res/layout/activity_fragment1.xml
+++ b/app/src/main/res/layout/activity_fragment1.xml
@@ -17,7 +17,6 @@
             android:orientation="vertical">
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -192,12 +191,18 @@
                     android:text="○ 전체 목록" />
 
             </LinearLayout>
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
 
 
         </LinearLayout>
