--- a/app/src/main/res/layout/activity_gradle3.xml
+++ b/app/src/main/res/layout/activity_gradle3.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:weightSum="100"
     android:layout_height="match_parent"
+    android:weightSum="100"
+    android:orientation="vertical"
     tools:context=".gradle.gradle3">
     <LinearLayout
         android:layout_weight="10"
@@ -14,6 +14,7 @@
         android:background="@color/ourcolor"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/btn_grid3_backpress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -34,8 +35,55 @@
         android:layout_height="1dp"/>
     <LinearLayout
         android:layout_weight="90"
+        android:weightSum="90"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp">
+        <com.google.android.material.tabs.TabLayout
+            android:layout_weight="6"
+            android:id="@+id/tabLayout_grid3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            android:weightSum="4"
+            android:background="#868e96">
+            <LinearLayout
+                android:id="@+id/linear_grid3_color1"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+            <LinearLayout
+                android:id="@+id/linear_grid3_color2"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+            <LinearLayout
+                android:id="@+id/linear_grid3_color3"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+            <LinearLayout
+                android:id="@+id/linear_grid3_color4"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+
+        </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_grid3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+
+
+
     </LinearLayout>
 
 </LinearLayout>
